# gitez

./: .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  lint.yml
src/: lib.rs  main.rs
src/cli_commands/: mod.rs
src/commands/: mod.rs
src/process/: clone_repo.rs  gen_ssh_key.rs  mod.rs  set_base_dir.rs
src/process/git_user_config/: add.rs  apply.rs  include.rs  list.rs  mod.rs  remove.rs
src/utils/: get_git_user_config_id.rs  git_url.rs  global_config.rs  mod.rs  select_git_user_config.rs  shell.rs
