[package]
name = "gitez"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
backtrace = "0.3.71"
clap = { version = "4.5.4", features = ["derive"] }
console = "0.15.8"
dialoguer = "0.11.0"
dirs = "5.0.1"
git2 = "0.18.3"
regex = "1.10.5"
serde = {version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
